# kmst.ca

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-entrypoint.sh  manage.py  pyproject.toml
home/: models.py
home/migrations/: 0003_homepage_heading.py
home/templates/home/: home_page.html
infodesk/: apps.py  models.py
infodesk/migrations/: 0001_initial.py  0002_alter_indexpage_colour.py  0003_alter_indexpage_post_body_alter_indexpage_pre_body.py  0004_remove_indexpage_cta_label_remove_indexpage_cta_link.py  0005_remove_contentpage_category_and_more.py  0006_rename_indexpagesubcategory_categorypagesubcategory.py  0007_contentpage_act_as_index.py  0008_alter_contentpage_body.py  0009_alter_categorypage_post_body_and_more.py  0010_alter_categorypage_post_body_and_more.py
infodesk/templates/infodesk/: category_page.html  content_page.html
kmstca/: blocks.py  constants.py  middleware.py  urls.py  wsgi.py
kmstca/migrations/: 0001_initial.py  0002_locationtag_topictag.py  0003_sitesettings.py  0004_sitesettings_colour_scheme.py  0005_kmstcasettings.py
kmstca/models/: __init__.py  settings.py  tags.py
kmstca/settings/: base.py  dev.py  production.py  test.py
kmstca/static/css/: main.css
kmstca/templates/: base.html
kmstca/templates/blocks/: heading.html  image.html  quote.html  subheading.html
kmstca/templatetags/: oderian.py
news/: constants.py  models.py
news/migrations/: 0001_initial.py  0002_article_image_alter_article_locations_and_more.py  0003_alter_article_body.py  0004_article_category.py  0005_alter_article_body.py  0006_alter_article_body.py
news/templates/news/: article.html  article_index.html
search/: views.py
search/templates/search/: search.html
