[tool.poetry]
name = "kmstca"
version = "0.1.0"
description = "The all-in-one government software for The Kingdom of Cassony"
authors = ["m5ka <m5ka+github@posteo.de>"]
license = "BSD 2-Clause"
readme = "README.md"

[tool.poetry.dependencies]
django = "^5.2.8"
django-minify-html = "^1.12"
django-storages = {version = "^1.14.6", extras = ["s3"]}
psycopg = {version = "^3.2.9", extras = ["pool"]}
python = "^3.12"
shortuuid = "^1.0.13"
wagtail = "^7.2"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.11"
pre-commit = "^4.2"
pytest = "^8.3.5"
pytest-django = "^4.11.1"
python-semantic-release = "^10.4.1"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "kmstca.settings.test"

[tool.ruff]
include = [
  "pyproject.toml",
  "kmstca/**/*.py",
  "home/**/*.py",
  "infodesk/**/*.py",
  "news/**/*.py",
  "search/**/*.py",
  "manage.py"
]
exclude = [
  "kmstca/migrations/*.py",
  "home/migrations/*.py",
  "infodesk/migrations/*.py",
  "news/migrations/*.py",
  "kmstca/settings/*.py"
]
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["F", "E", "W", "I"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = true
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.semantic_release]
allow_zero_version = true
major_on_zero = false
commit_message = "chore: Bump to version {version}\n\nAutomatically generated by python-semantic-release"
version_toml = ["pyproject.toml:tool.poetry.version"]

[build-system]
requires = ["poetry-core>=2.1.3"]
build-backend = "poetry.core.masonry.api"
